website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.1.1/guides/docs/docs-multi-instance.mdx
---
id: multi-instance
description: Use multiple docs plugin instances on a single Docusaurus site.
slug: /docs-multi-instance
---

# 多實例文檔

`@docusaurus/plugin-content-docs` 插件可支援 [多實例](../../using-plugins.mdx#multi-instance-plugins-and-plugin-ids)功能。

:::note

此功能僅對[版本化文檔](./versioning.mdx)有用。建議在閱讀本頁前先熟悉文檔版本化功能。若您只需要[多側邊欄](./sidebar/multiple-sidebars.mdx)，在單一插件內即可實現。

:::

## 使用場景 {#use-cases}

有時您會希望一個 Docusaurus 站點能托管兩套（或更多）獨立的文檔集。

這些文檔甚至可能擁有不同的版本控制/發佈週期。

### 移動端 SDK 文檔 {#mobile-sdks-documentation}

如果您開發跨平台移動端 SDK，可能會擁有兩套文檔：

- Android SDK 文檔（`v1.0`、`v1.1`）
- iOS SDK 文檔（`v1.0`、`v2.0`）

此情況下，可為每個移動端 SDK 文檔使用獨立的插件實例。

:::warning

若每個文檔實例體量龐大，您應該建立兩個獨立的 Docusaurus 站點。

當有人編輯 iOS 文檔時，重新構建包括未變更的 Android 文檔在內的所有內容，真的有必要嗎？

:::

### 版本化與非版本化文檔 {#versioned-and-unversioned-doc}

有時您希望部分文檔進行版本控制，而其他文檔保持「全局性」，對其進行版本化顯得無意義。

我們在 Docusaurus 官方網站就採用此模式：

- [/docs/\*](/docs) 章節是版本化的
- [/community/\*](/community/support) 章節是非版本化的

## 配置方法 {#setup}

假設您有兩套文檔：

- 產品文檔：關於產品的版本化文檔
- 社群文檔：關於產品周邊社群的非版本化文檔

此情況下，您應在站點配置中重複使用該插件兩次。

:::warning

`@docusaurus/preset-classic` 已預設包含一個文檔插件實例！

:::

使用預設配置時：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-start
          // id: 'product', // omitted => default instance
          // highlight-end
          path: 'product',
          routeBasePath: 'product',
          sidebarPath: './sidebarsProduct.js',
          // ... other options
        },
      },
    ],
  ],
  plugins: [
    [
      '@docusaurus/plugin-content-docs',
      {
        // highlight-start
        id: 'community',
        // highlight-end
        path: 'community',
        routeBasePath: 'community',
        sidebarPath: './sidebarsCommunity.js',
        // ... other options
      },
    ],
  ],
};
```

不使用預設配置時：

```js title="docusaurus.config.js"
export default {
  plugins: [
    [
      '@docusaurus/plugin-content-docs',
      {
        // highlight-start
        // id: 'product', // omitted => default instance
        // highlight-end
        path: 'product',
        routeBasePath: 'product',
        sidebarPath: './sidebarsProduct.js',
        // ... other options
      },
    ],
    [
      '@docusaurus/plugin-content-docs',
      {
        // highlight-start
        id: 'community',
        // highlight-end
        path: 'community',
        routeBasePath: 'community',
        sidebarPath: './sidebarsCommunity.js',
        // ... other options
      },
    ],
  ],
};
```

請勿忘記為插件實例分配唯一的 `id` 屬性。

:::note

我們將 `product` 實例視為最重要的實例，通過不分配 ID 使其成為「預設」實例。

:::

## 版本化路徑 {#versioned-paths}

每個插件實例會將版本化文檔存儲在獨立目錄中。

預設插件實例將使用以下路徑：

- `website/versions.json`
- `website/versioned_docs`
- `website/versioned_sidebars`

其他插件實例（帶有 `id` 屬性）將使用以下路徑：

- `website/[pluginId]_versions.json`
- `website/[pluginId]_versioned_docs`
- `website/[pluginId]_versioned_sidebars`

:::tip

您可為其中一個文檔插件實例省略 `id` 屬性（默認為 `default`）。

該實例路徑會更簡潔，並與單實例配置保持回溯兼容性。

:::

## 標記新版本 {#tagging-new-versions}

每個插件實例將擁有獨立的 CLI 命令來標記新版本。執行以下命令即可查看：

```bash npm2yarn
npm run docusaurus -- --help
```

要為產品/預設文件插件實例進行版本控制：

```bash npm2yarn
npm run docusaurus docs:version 1.0.0
```

要為非預設/社群文件插件實例進行版本控制：

```bash npm2yarn
npm run docusaurus docs:version:community 1.0.0
```

## 文件導航欄項目 {#docs-navbar-items}

每個與文件相關的[主題導航欄項目](../../api/themes/theme-configuration.mdx#navbar)都可選用 `docsPluginId` 屬性。

舉例來說，若您想為每個行動 SDK（iOS 和 Android）設置獨立的版本下拉選單，可以這樣設定：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        {
          type: 'docsVersionDropdown',
          // highlight-start
          docsPluginId: 'ios',
          // highlight-end
        },
        {
          type: 'docsVersionDropdown',
          // highlight-start
          docsPluginId: 'android',
          // highlight-end
        },
      ],
    },
  },
};
```